Finalización de cesta y Perfil
Se terminó HTML y colocación de Cesta:
#----Cesta----#
    Cesta: se ubican las diferentes opciones de compra, el carrito con los objetos añadidos a este, y el costo total de todos los elementos del carrito.

    La opción de compra en tienda: Muestra las tiendas donde se venden los productos.

    La opción de envío a domicilio: tras rellenar todos los datos, podemos dar a enviar. Esto nos llevará a una pantalla donde habrá por pantalla un rango de fechas en los que podrá llegar el pedido. Tras esta, veremos una pantalla con los distintos métodos de pago

    La opción de envío a domicilio exprés: igual que la anterior, pero en este caso únicamente habrá una opción de pago al rellenar los datos, ya que asumimos que al ser exprés tardará como máximo x días contados.

#----Perfil----#
     Como pantalla principal al entrar en el perfil se verán los datos del usuario. Tendremos en las 3 pestañas principales del perfil la opcion de navegar entre estas:

    Compras: Veremos los objetos que hemos comprado y debajo de la foto de perfil del usuario se podrá ir al catálogo para seguir comprando.

    Vender: Veremos los objetos que hemos vendido/tenemos en venta (falta hablarlo), debajo de la foto de perfil tendremos un botón para añadir una venta adicional.

   Venta de objeto para particulares: Tendremos un formulario para añadir los datos del objeto que queremos vender.

    Venta de objeto para empresas: No sabemos como implementar este dentro de la página, entiendo que de alguna forma lo tendrían que colocar las personas autorizadas para ello, y no una empresa.

--- a/web/Cesta/cesta.html
+++ b/web/Cesta/cesta.html
@@ -10,19 +10,25 @@
 <body>
     <h1>Cesta</h1>
     <!--Parte de arriba, opciones para la entrega de los productos-->
-    <div>
-        <div class="cuadro c1"><a class="txt" href="/web/Cesta/op1.html">Recogida en tienda</a></div>
-        <div class="cuadro c2"><a class="txt" href="/web/Cesta/op2.html">Envio a domicilio</a></div>
-        <div class="cuadro c3"><a class="txt" href="/web/Cesta/op3.html">Envio a domicilio Express</a></div>
-        <div class="cuadro c4"><a class="txt" href="/web/Cesta/op4.html">Entrega Programada</a></div>
+    <div class="flex full">
+        <a class="txt" href="/web/Cesta/op1.html"><div class="cuadro">Recogida en tienda</div></a>
+        <a class="txt" href="/web/Cesta/op2.html"><div class="cuadro">Envio a domicilio</div></a>
+        <a class="txt" href="/web/Cesta/op3.html"><div class="cuadro">Envio a domicilio Express</div></a>
     </div>
 
     <!--Parte de abajo, articulos en la cesta-->
+    <!--Se asume que a la hora de tener x elementos en el carrito
+    se habrán insertado x li dentro de "articulos"-->
     <div class="carrito">
-        <ul id="ariculos">
+        <ul id="articulos">
             <li class="izq producto">Articulo 1</li>
             <li class="izq producto">Articulo 2</li>
             <li class="izq producto">Articulo 3</li>
+            <li class="izq producto">Articulo 4</li>
         </ul>
+        <div class="der costo">
+            <div>Costo total</div>
+            <p id="costoTotal">50€</p>
+        </div>
     </div>
 </body>
