--- a/web/Cesta/op3.html
+++ b/web/Cesta/op3.html
@@ -13,7 +13,7 @@
         <div class="cabecera">
             <p class="t-cabecera">Datos de envío</p>
         </div>
-        <form action="/web/Cesta/opFecha.html">
+        <form action="buy">
             <!--Nombre completo-->
             <div>
                 <input type="text" placeholder="Nombre" id="nombre" class=" inp-txt" required>
@@ -44,15 +44,10 @@
         </form>
         <!--Parte de abajo, articulos en la cesta-->
         <div class="carrito">
-            <div class="der costo">
-                <div>Costo total</div>
-                <p id="costoTotal">50€</p>
-            </div>
             <ul id="ariculos">
                 <li class="izq producto">Articulo 1</li>
                 <li class="izq producto">Articulo 2</li>
                 <li class="izq producto">Articulo 3</li>
-                <li class="izq producto">Articulo 4</li>
             </ul>
         </div>
     </div>
