--- a/web/Cesta/opFecha.html
+++ b/web/Cesta/opFecha.html
@@ -15,13 +15,14 @@
         </div>
 
         <!--Izquierda-->
-        <div class="fecha f-izq" id="calendario1">
+        <div class="fecha" id="calendario1">
             Fechas
         </div>
 
-        <!--derecha-->
-        <div class="fecha f-der" id="calendario2">
-            Fechas
-        </div>
+        <form action="/web/Cesta/opMetodoCompra.html">
+            <div class="cent bot">
+                <input type="submit" onclick="completeBuy">
+            </div>
+        </form>
     </div>
 </body>
