--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <!--Izquierda-->
     <div>
-        <a href="/web/catalogo.html" class="btn izq" id="btonCompra" value="COMPRA">COMPRA</a>
+        <form action="/web/catalogo.html">
+            <input type="submit" class="btn izq" id="btnCompra" value="COMPRA">
+        </form>
     </div>
 
     <!--Palito del medio-->
@@ -18,8 +20,8 @@
 
     <!--Derecha-->
     <div>
-        <form>
-            <input type="button" class="btn der" id="btnVenta" value="VENTA">
+        <form action="/web/LogIn_SignIn.html">
+            <input type="submit" class="btn der" id="btnVenta" value="VENTA">
         </form>
     </div>
 </body>
