--- a/web/LogIn_SignIn.html
+++ b/web/LogIn_SignIn.html
@@ -22,27 +22,27 @@
                         <div>
                             <h3 class="cent shadow"> INICIA SESIÓN </h3>
                         </div>
-                        <div>
+                        <div class="cent">
                             <form action="signIn">
-                                <input type="text" class="txt txtsin" id="signInEmail" placeholder="Dirección de e-mail" required/>
-                                <input type="text" class="txt txtsin" id="signInPass" placeholder="Contraseña" required/>
+                                <input type="text" class="txtsin" id="signInEmail" placeholder="Dirección de e-mail" required/>
+                                <input type="text" class="txtsin" id="signInPass" placeholder="Contraseña" required/>
                             </form>
                             <!--Botón para acceder-->
-                            <div class="cent">
+                            <div>
                                 <input type="submit" id="btnEnter" value="Enviar" />
                             </div>
                         </div>
 
 
                         <!--Cuadro registrarse-->
-                        <div class="recuadro-signin w100 h50">
+                        <div class="recuadro-signin w100 h50 cent">
                             <!--cabecera Registro-->
                             <div>
                                 <h3 class="cent">REGISTRARSE</h3>
                             </div>
                             <form action="signIn">
-                                <input type="text" class="txt txtsin" id="signInEmail" placeholder="Dirección de e-mail" required/>
-                                <input type="text" class="txt txtsin" id="signInPass" placeholder="Contraseña" required/>
+                                <input type="text" class="txtsin" id="signInEmail" placeholder="Dirección de e-mail" required/>
+                                <input type="text" class="txtsin" id="signInPass" placeholder="Contraseña" required/>
                             </form>
                             <!--Botón para acceder-->
                             <div class="cent">
