--- a/web/catalogo.html
+++ b/web/catalogo.html
@@ -16,11 +16,12 @@
             <div class="nombre">
                 <p>Nombre</p>
             </div>
+    
             <!--Parte del usuario-->
             <div>
                 <a href="/web/PerfilUsuario/Inicio.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/Usuario.png" id="foto-u" height="25" width="25">
+                        <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
                     </div>
                     <div>
                         <p id="nombreUser" class="userName">Nombre de usuario</p>
@@ -34,7 +35,7 @@
             <div>
                 <a href="/web/Cesta/cesta.html">
                     <div  class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
+                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
                     </div>
                     <div>
                         <p class="c-nombre">Carrito</p>
