--- a/web/Cesta/op3.html
+++ b/web/Cesta/op3.html
@@ -13,7 +13,7 @@
         <div class="cabecera">
             <p class="t-cabecera">Datos de envío</p>
         </div>
-        <form action="buy">
+        <form action="/web/Cesta/opMetodoCompra.html">
             <!--Nombre completo-->
             <div>
                 <input type="text" placeholder="Nombre" id="nombre" class=" inp-txt" required>
