--- a/web/PerfilUsuario/Inicio.html
+++ b/web/PerfilUsuario/Inicio.html
@@ -27,7 +27,7 @@
             <div>
                 <a href="/web/PerfilUsuario/Inicio.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/Usuario.png" id="foto-u" height="25" width="25">
+                        <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
                     </div>
                     <div>
                         <p id="nombreUser" class="userName">Nombre de usuario</p>
@@ -41,7 +41,7 @@
             <div>
                 <a href="/web/Cesta/cesta.html">
                     <div  class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
+                        <img src="/img/Logos/carrito.jpg" class="foto-c foto">
                     </div>
                     <div>
                         <p class="c-nombre">Carrito</p>
