Finalización Catálogo y Categorías y pequeños cambios
Se terminó de hacer los HTML y CSS de Catálogo y Categorías:
    En la parte de categorías podremos elegir una categoría de entre las ubicadas (sujeto a cambios) y en este caso mega alpha, podremos acceder al catálogo clicando en "General".

   En la parte de catálogo tenemos cada objeto que se vende, y al pasar el ratón por encima veremos información adicional de éste, el precio, el nombre y una pequeña descripción (está sujeto a modificaciones) desde aquí gracias a la cabecera, se podrá acceder al carrito y al perfil del usuario.

--- a/web/LogIn_SignIn.html
+++ b/web/LogIn_SignIn.html
@@ -25,7 +25,7 @@
                         <div class="cent">
                             <form action="signIn">
                                 <input type="text" class="txtsin" id="signInEmail" placeholder="Dirección de e-mail" required/>
-                                <input type="text" class="txtsin" id="signInPass" placeholder="Contraseña" required/>
+                                <input type="password" class="txtsin" id="signInPass" placeholder="Contraseña" required/>
                             </form>
                             <!--Botón para acceder-->
                             <div>
@@ -42,7 +42,7 @@
                             </div>
                             <form action="signIn">
                                 <input type="text" class="txtsin" id="signInEmail" placeholder="Dirección de e-mail" required/>
-                                <input type="text" class="txtsin" id="signInPass" placeholder="Contraseña" required/>
+                                <input type="password" class="txtsin" id="signInPass" placeholder="Contraseña" required/>
                             </form>
                             <!--Botón para acceder-->
                             <div class="cent">
