--- a/web/catalogo.html
+++ b/web/catalogo.html
@@ -16,7 +16,7 @@
             <div class="nombre">
                 <p>Nombre</p>
             </div>
-    
+
             <!--Parte del usuario-->
             <div>
                 <a href="/web/PerfilUsuario/Inicio.html">
@@ -30,11 +30,11 @@
             </div>
             <!--Separación-->
             <sep class="sep"></sep>
-    
+
             <!--Carrito-->
             <div>
                 <a href="/web/Cesta/cesta.html">
-                    <div  class="cuadro">
+                    <div class="cuadro">
                         <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
                     </div>
                     <div>
@@ -44,21 +44,78 @@
             </div>
         </div>
     </header>
-    <div class="pad">
+    <div class="padre">
+        <template>
+            <div class="imagen">
+                <a href="">
+                    <img src="" id="idImg1" />
+                    <div class="content">
+                        <h2>Objeto</h2>
+                        <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                        <p id="precio">50€</p>
+                    </div>
+                </a>
+            </div>
+        </template>
         <!--Ubicacion de cada foto-->
-        <div class="padre">
-            <img class="imagen" src="/img/catalogo/img_prueba.webp" id="idImg1" alt="Persona1" />
-            <img class="imagen" src="/img/catalogo/Img_pruebas1.jpg" id="idImg2" alt="Persona2" />
-            <img class="imagen" src="/img/catalogo/img_prueba2.jpg" id="idImg3" alt="Persona3" />
-            <img class="rect" id="idImg4" />
-            <img class="rect" id="idImg5" />
+        <div class="imagen">
+            <a href="/web/Pestaña Objeto/objParticular.html">
+                <img src="/img/catalogo/img_prueba.webp" id="idImg1" />
+                <div class="content">
+                    <h2>Objeto</h2>
+                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                    <p id="precio">50€</p>
+                </div>
+            </a>
         </div>
-        <div class="padre">
-            <img class="rect" id="idImg6" />
-            <img class="rect" id="idImg7" />
-            <img class="rect" id="idImg8" />
-            <img class="rect" id="idImg9" />
-            <img class="rect" id="idImg10" />
+        <div class="imagen">
+            <a href="/web/Pestaña Objeto/objEmpresa.html">
+                <img src="/img/catalogo/Img_pruebas1.jpg" id="idImg1" />
+                <div class="content">
+                    <h2>Objeto</h2>
+                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                    <p id="precio">50€</p>
+                </div>
+            </a>
+        </div>
+        <div class="imagen">
+            <img src="/img/catalogo/img_prueba2.jpg" id="idImg3" />
+            <div class="content">
+                <h2>Objeto</h2>
+                <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                <p id="precio">50€</p>
+            </div>
+        </div>
+        <div class="rect imagen">
+            <img id="idImg4" />
+            <div class="content">
+                <h2>Objeto</h2>
+                <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                <p id="precio">50€</p>
+            </div>
+        </div>
+        <div class="rect imagen">
+            <img id="idImg4" />
+            <div class="content">
+                <h2>Objeto</h2>
+                <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                <p id="precio">50€</p>
+            </div>
+        </div>
+        <div class="rect imagen">
+            <img id="idImg4" />
+            <div class="content">
+                <h2>Objeto</h2>
+                <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                <p id="precio">50€</p>
+            </div>
+        </div>
+        <div class="rect imagen">
+            <img id="idImg4" />
+            <div class="content">
+                <h2>Objeto</h2>
+                <p>Este objeto se encuentra en tienda, es de una seda...</p>
+            </div>
         </div>
     </div>
 
