--- a/web/PerfilUsuario/Inicio.html
+++ b/web/PerfilUsuario/Inicio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
     <title>Usuario-Inicio</title>
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="/CSS/header_footer/footer.css">
     <link rel="stylesheet" href="/CSS/perfil/perfil.css">
 </head>
+
 <body>
     <header>
         <div class="c-fondo">
@@ -16,7 +18,7 @@
             <div class="nombre">
                 <p>Nombre</p>
             </div>
-            <div  class="izq full">
+            <div class="izq full">
                 <ul class="cabecera">
                     <li class="choosen"><a href="/web/PerfilUsuario/Inicio.html">Perfil</a></li>
                     <li><a href="/web/PerfilUsuario/Compras.html">Compras</a></li>
@@ -36,11 +38,11 @@
             </div>
             <!--Separación-->
             <sep class="sep"></sep>
-    
+
             <!--Carrito-->
             <div>
                 <a href="/web/Cesta/cesta.html">
-                    <div  class="cuadro">
+                    <div class="cuadro">
                         <img src="/img/Logos/carrito.jpg" class="foto-c foto">
                     </div>
                     <div>
@@ -54,24 +56,79 @@
     <div class="f-gris">
         <!--Imagen del usuario-->
         <div class="izq pict top-m">
-            <img src="/img/Logos/Usuario.png" id="userPicture" width="200" height="200"/>
+            <img src="/img/Logos/Usuario.png" id="userPicture" width="200" height="200" />
         </div>
         <!--Fondo de los datos-->
         <div class="der recuadro top-m">
-            <!--zona de los datos-->
-            <div class="izq cent">
-                <div><p id="userName">Nombre completo</p></div>
-                <div><p id="userAge">Edad</p></div>
-                <div><p id="userWallet">Cartera</p></div>
-                <div><p id="userData1">Más datos1</p></div>
-                <div><p id="userData2">Más datos2</p></div>
-                <div><p id="userData3">Más datos3</p></div>
+            <div class="cuad">
+                <!--zona de los datos-->
+                <div class="izq cent">
+                    <div>
+                        <p id="userName">Nombre completo</p>
+                    </div>
+                    <div>
+                        <p id="userAge">Edad</p>
+                    </div>
+                    <div>
+                        <p id="userWallet">Cartera</p>
+                    </div>
+                    <div>
+                        <p id="userData1">Más datos1</p>
+                    </div>
+                    <div>
+                        <p id="userData2">Más datos2</p>
+                    </div>
+                    <div>
+                        <p id="userData3">Más datos3</p>
+                    </div>
+                </div>
+                <!--Zona ubicación-->
+                <div class="der cent">
+                    <p>Ubicación</p>
+                    <div style="background-color: grey; width: 300px; height: 300px;" id="userUbicacion">
+                        mapa
+                    </div>
+                </div>
             </div>
-            <!--Zona ubicación-->
-            <div class="der cent">
-                <p>Ubicación</p>
-                <div style="background-color: grey; width: 300px; height: 300px;" id="userUbicacion">
-                    mapa
+
+            <!--Lista de deseos-->
+            <div>
+                <div class="cent">
+                    <h2>Lista de Favoritos</h2>
+                </div>
+                <div class="recuadro bg-ligth r-full">
+                    <ul class="objetos">
+                        <li class="objeto" id="Obj1">
+                            <div class="flex">
+                                <div><img class="objFoto" id="objFoto1"></div>
+                                <div class="full">
+                                    <p class="nObj" id="nombreObjeto1">Objeto 1</p>
+                                    <p class="desc " id="objDescripcion">
+                                        Esto sería un ejemplo para ver como se despliega el recuadro de textod e la descripción, de forma que se vea lo más decente posible, sin tener que modificar nada extraño, simplemente con lo qeu ya hay colocado.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="objeto" id="Obj2">
+                            <div class="flex">
+                                <div><img class="objFoto" id="objFoto2"></div>
+                                <div class="full">
+                                    <p class="nObj" id="nombreObjeto2">Objeto 2</p>
+                                    <p class="desc " id="objDescripcion">descripción</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="objeto" id="Obj2">
+                            <div class="flex">
+                                <div><img class="objFoto" id="objFoto2"></div>
+                                <div class="full">
+                                    <p class="nObj" id="nombreObjeto2">Objeto 2</p>
+                                    <p class="desc " id="objDescripcion">descripción</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -82,4 +139,5 @@
             <br/> Esta página web está aprobadisima.</p>
     </footer>
 </body>
+
 </html>
