--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Index Página</title>
     <link rel="stylesheet" href="/CSS/inicio.css">
 </head>
+
 <body>
     <!--Background-->
-    <img src="/img/gestion-compra-venta.jpg" class="bg"/>
+    <img src="/img/gestion-compra-venta.jpg" class="bg" />
 
     <!--Izquierda-->
     <div>
-        <form action="/web/catalogo.html">
+        <form action="/web/categorias.html">
             <input type="submit" class="btn izq" id="btnCompra" value="COMPRA">
         </form>
     </div>
@@ -25,4 +27,5 @@
         </form>
     </div>
 </body>
+
 </html>
