--- a/web/Pestaña Objeto/objEmpresa.html
+++ b/web/Pestaña Objeto/objEmpresa.html
@@ -65,27 +65,27 @@
             <div class="flex">
                 <!-- Esto se usará luego para la realización de colores alternativos -->
                 <template>
-                    <img src="/img/Objeto/img2.jpg" id="alt1" class="opcion" />
+                    <div><img src="/img/Objeto/img2.jpg" id="alt1" class="opcion" /></div>
                 </template>
 
                 <!-- Para que se vea como pretende ser se realiza lo de abajo-->
                 <div>
-                    <img src="/img/Objeto/img2.jpg" id="alt1" class="opcion" />
+                    <div><img src="/img/Objeto/img2.jpg" id="alt1" class="opcion" /></div>
                 </div>
                 <div>
-                    <img src="/img/Objeto/img1.jpg" id="alt2" class="opcion" />
+                    <div><img src="/img/Objeto/img1.jpg" id="alt2" class="opcion" /></div>
                 </div>
                 <div>
-                    <img src="/img/Objeto/img3.jpg" id="alt3" class="opcion" />
+                    <div><img src="/img/Objeto/img3.jpg" id="alt3" class="opcion" /></div>
                 </div>
                 <div>
-                    <img src="/img/Objeto/img4.jpg" id="alt4" class="opcion" />
+                    <div><img src="/img/Objeto/img4.jpg" id="alt4" class="opcion" /></div>
                 </div>
                 <div>
-                    <img src="/img/Objeto/img5.jpg" id="alt5" class="opcion" />
+                    <div><img src="/img/Objeto/img5.jpg" id="alt5" class="opcion" /></div>
                 </div>
                 <div>
-                    <img src="/img/Objeto/img6.jpg" id="alt6" class="opcion" />
+                    <div><img src="/img/Objeto/img6.jpg" id="alt6" class="opcion" /></div>
                 </div>
             </div>
 
