--- a/web/Compra/Cesta/cesta.html
+++ b/web/Compra/Cesta/cesta.html
@@ -11,14 +11,14 @@
     <h1>Cesta</h1>
     <!--Parte de arriba, opciones para la entrega de los productos-->
     <div class="flex full">
-        <a class="txt" href="/web/Cesta/op1.html">
+        <a class="txt" href="/web/Compra/Cesta/op1.html">
             <div class="cuadro">Recogida en tienda</div>
         </a>
-        <a class="txt" href="/web/Cesta/op2.html">
+        <a class="txt" href="/web/Compra/Cesta/op2.html">
             <div class="cuadro">Envio a domicilio</div>
         </a>
-        <a class="txt" href="/web/Cesta/op3.html">
-            <div class="cuadro">Envio a domicilio Express</div>
+        <a class="txt" href="/web/Compra/Cesta/op3.html">
+            <div class="cuadro">Envio a domicilio Express (1-3 Días)</div>
         </a>
     </div>
 
