--- a/web/Compra/Cesta/op1.html
+++ b/web/Compra/Cesta/op1.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Recogida en Tienda</title>
+    <link rel="stylesheet" href="/CSS/inicio.css">
     <link rel="stylesheet" href="/CSS/cesta/cesta.css">
     <link rel="stylesheet" href="/CSS/cesta/op.css">
 </head>
@@ -21,6 +22,11 @@
                 <li class="tienda">Tienda 1</li>
                 <li class="tienda">Tienda 2</li>
             </ul>
+            <div class="cent">
+                <form action="/web/Compra/Cesta/op2.html">
+                    <input type="submit" value="Continuar">
+                </form>
+            </div>
         </div>
 
         <!--Cuadro derecho con el mapa-->
