--- a/web/Compra/ComprarObjeto/objEmpresa.html
+++ b/web/Compra/ComprarObjeto/objEmpresa.html
@@ -30,15 +30,21 @@
             </div>
             <!--Separación-->
             <sep class="sep"></sep>
-
-            <!--Carrito-->
+            <!--Favoritos-->
             <div>
-                <a href="/web/Cesta/cesta.html">
+                <a href="\web\Compra\favsCompra.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
+                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
                     </div>
-                    <div>
-                        <p class="c-nombre">Carrito</p>
+                </a>
+            </div>
+            <!--Separación-->
+            <sep class="sep"></sep>
+            <!--Favoritos-->
+            <div>
+                <a href="/web/Compra/Cesta/cesta.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/chat.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
