--- a/web/Compra/categoriasCompra.html
+++ b/web/Compra/categoriasCompra.html
@@ -29,15 +29,21 @@
             </div>
             <!--Separación-->
             <sep class="sep"></sep>
-
-            <!--Carrito-->
+            <!--Favoritos-->
             <div>
-                <a href="/web/Cesta/cesta.html">
+                <a href="\web\Compra\favsCompra.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
+                    </div>
+                </a>
+            </div>
+            <!--Separación-->
+            <sep class="sep"></sep>
+            <!--Favoritos-->
+            <div>
+                <a href="/web/Compra/Cesta/cesta.html">
                     <div class="cuadro">
                         <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
-                    </div>
-                    <div>
-                        <p class="c-nombre">Carrito</p>
                     </div>
                 </a>
             </div>
@@ -49,8 +55,7 @@
         <div class="recuadro">
             <div>
                 <ul class="l-mar l-pad">
-                    <li><a href="/web/catalogo.html" id="general">General</a></li>
-                    <li><a href="" id="camisa">Camisa</a></li>
+                    <li><a href="/web/Compra/catalogoCompras.html" id="camisa">Camisa</a></li>
                     <li><a href="" id="camiseta">Camiseta</a></li>
                     <li><a href="" id="pantalon">Pantalón</a></li>
                     <li><a href="" id="abrigos">Abrigos</a></li>
