--- a/web/PerfilUsuario/Compras.html
+++ b/web/PerfilUsuario/Compras.html
@@ -41,12 +41,22 @@
 
             <!--Carrito-->
             <div>
-                <a href="/web/Cesta/cesta.html">
+                <a href="/web/Compra/Cesta/cesta.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c foto">
+                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
                     </div>
                     <div>
                         <p class="c-nombre">Carrito</p>
+                    </div>
+                </a>
+            </div>
+            <!--Separación-->
+            <sep class="sep"></sep>
+            <!--Favoritos-->
+            <div>
+                <a href="\web\Compra\favsCompra.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
@@ -59,7 +69,7 @@
             <div class="izq pict top-m">
                 <img src="/img/Logos/Usuario.png" id="userPicture" width="200" height="200" />
                 <div class="cent top-m">
-                    <form action="/web/catalogo.html">
+                    <form action="/web/Compra/catalogoCompras.html">
                         <input type="submit" value="Catálogo" id="btnCatalogo">
                     </form>
                 </div>
