--- a/web/Venta/ComprarObjeto/objParticular.html
+++ b/web/Venta/ComprarObjeto/objParticular.html
@@ -16,7 +16,7 @@
             <div class="nombre">
                 <p>Nombre</p>
             </div>
-    
+
             <!--Parte del usuario-->
             <div>
                 <a href="/web/PerfilUsuario/Inicio.html">
@@ -30,15 +30,21 @@
             </div>
             <!--Separación-->
             <sep class="sep"></sep>
-    
-            <!--Carrito-->
+            <!--Favoritos-->
             <div>
-                <a href="/web/Cesta/cesta.html">
-                    <div  class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
+                <a href="\web\Venta\favsVenta.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
                     </div>
-                    <div>
-                        <p class="c-nombre">Carrito</p>
+                </a>
+            </div>
+            <!--Separación-->
+            <sep class="sep"></sep>
+            <!--Favoritos-->
+            <div>
+                <a href="/web/Compra/Cesta/cesta.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/chat.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
@@ -54,9 +60,15 @@
         <div class="der recuadro">
             <!--Nombres e ids-->
             <div class="izq">
-                <div><p id="objName">Nombre del objeto</p></div>
-                <div><h3 id="precio">50€</h3></div>
-                <div><p id="propietario">Cristóbal José Jiménez Gómez</p></div>
+                <div>
+                    <p id="objName">Nombre del objeto</p>
+                </div>
+                <div>
+                    <h3 id="precio">50€</h3>
+                </div>
+                <div>
+                    <p id="propietario">Cristóbal José Jiménez Gómez</p>
+                </div>
             </div>
 
             <!--Descripción del artículo-->
