--- a/web/Venta/catalogoVentas.html
+++ b/web/Venta/catalogoVentas.html
@@ -30,15 +30,21 @@
             </div>
             <!--Separación-->
             <sep class="sep"></sep>
-
-            <!--Carrito-->
+            <!--Favoritos-->
             <div>
-                <a href="/web/Cesta/cesta.html">
+                <a href="\web\Venta\favsVenta.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
+                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
                     </div>
-                    <div>
-                        <p class="c-nombre">Carrito</p>
+                </a>
+            </div>
+            <!--Separación-->
+            <sep class="sep"></sep>
+            <!--Favoritos-->
+            <div>
+                <a href="/web/Compra/Cesta/cesta.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/chat.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
@@ -59,32 +65,14 @@
         </template>
         <!--Ubicacion de cada foto-->
         <div class="imagen">
-            <a href="/web/Pestaña Objeto/objParticular.html">
+            <a href="/web/Venta/ComprarObjeto/objParticular.html">
                 <img src="/img/catalogo/img_prueba.webp" id="idImg1" />
                 <div class="content">
                     <h2>Objeto</h2>
-                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                    <p>Bonita camisa ejej</p>
                     <p id="precio">50€</p>
                 </div>
             </a>
-        </div>
-        <div class="imagen">
-            <a href="/web/Pestaña Objeto/objEmpresa.html">
-                <img src="/img/catalogo/Img_pruebas1.jpg" id="idImg1" />
-                <div class="content">
-                    <h2>Objeto</h2>
-                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
-                    <p id="precio">50€</p>
-                </div>
-            </a>
-        </div>
-        <div class="imagen">
-            <img src="/img/catalogo/img_prueba2.jpg" id="idImg3" />
-            <div class="content">
-                <h2>Objeto</h2>
-                <p>Este objeto se encuentra en tienda, es de una seda...</p>
-                <p id="precio">50€</p>
-            </div>
         </div>
         <div class="rect imagen">
             <img id="idImg4" />
