--- a/index.html
+++ b/index.html
@@ -7,24 +7,20 @@
 </head>
 
 <body>
-    <!--Background-->
-    <img src="/img/gestion-compra-venta.jpg" class="bg" />
+    <div class="container">
+        <!--Izquierda-->
+        <div class="l-cont">
+            <form action="/web/Compra/categoriasCompra.html">
+                <input type="submit" class="btn izq" id="btnCompra" value="COMPRA">
+            </form>
+        </div>
 
-    <!--Izquierda-->
-    <div>
-        <form action="/web/categorias.html">
-            <input type="submit" class="btn izq" id="btnCompra" value="COMPRA">
-        </form>
-    </div>
-
-    <!--Palito del medio-->
-    <div class="palo"></div>
-
-    <!--Derecha-->
-    <div>
-        <form action="/web/LogIn_SignIn.html">
-            <input type="submit" class="btn der" id="btnVenta" value="VENTA">
-        </form>
+        <!--Derecha-->
+        <div class="r-cont">
+            <form action="/web/LogIn_SignIn.html">
+                <input type="submit" class="btn der" id="btnVenta" value="VENTA">
+            </form>
+        </div>
     </div>
 </body>
 
