--- a/web/CódigoReutilizable/headerCompra.html
+++ b/web/CódigoReutilizable/headerCompra.html
@@ -9,7 +9,7 @@
         <div>
             <a href="/web/PerfilUsuario/Inicio.html">
                 <div class="cuadro">
-                    <img src="/img/Logos/Usuario.png" id="foto-u" height="25" width="25">
+                    <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
                 </div>
                 <div>
                     <p id="nombreUser" class="userName">Nombre de usuario</p>
@@ -18,15 +18,21 @@
         </div>
         <!--Separación-->
         <sep class="sep"></sep>
-
-        <!--Carrito-->
+        <!--Favoritos-->
         <div>
-            <a href="/web/Cesta/cesta.html">
-                <div  class="cuadro">
-                    <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
+            <a href="\web\Compra\favsCompra.html">
+                <div class="cuadro">
+                    <img src="/img/Logos/fav0.png" class="foto-c  foto">
                 </div>
-                <div>
-                    <p class="c-nombre">Carrito</p>
+            </a>
+        </div>
+        <!--Separación-->
+        <sep class="sep"></sep>
+        <!--Favoritos-->
+        <div>
+            <a href="/web/Compra/Cesta/cesta.html">
+                <div class="cuadro">
+                    <img src="/img/Logos/chat.png" class="foto-c  foto">
                 </div>
             </a>
         </div>
