--- a/web/PerfilUsuario/Inicio.html
+++ b/web/PerfilUsuario/Inicio.html
@@ -41,12 +41,22 @@
 
             <!--Carrito-->
             <div>
-                <a href="/web/Cesta/cesta.html">
+                <a href="/web/Compra/Cesta/cesta.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c foto">
+                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
                     </div>
                     <div>
                         <p class="c-nombre">Carrito</p>
+                    </div>
+                </a>
+            </div>
+            <!--Separación-->
+            <sep class="sep"></sep>
+            <!--Favoritos-->
+            <div>
+                <a href="\web\Compra\favsCompra.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
