Algunos cambios (Leer desc)
Se han cambiado ciertos valores de todas las cabeceras para que concuerden entre ellas

Se ha hecho un cambio en la forma de distribuir los objetos (Parte de compra y parte de venta)

Se ha añadido una pantalla chats, en absoluto funcional, dado que no tengo ni idea de por donde abordarla... pero eso ya será problema del Cristóbal del futuro (Lo siento Cristóbal del futuro <3)

Ahora si se podría dar por terminado el primer Sprint, a falta de hablar con Aitana y hacer un Merge a master.

--- a/web/Compra/categoriasCompra.html
+++ b/web/Compra/categoriasCompra.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="c-fondo">
+        <div class="cab-fondo">
             <!--Nombre de la tienda-->
             <div class="nombre">
                 <p>Nombre</p>
@@ -43,7 +43,7 @@
             <div>
                 <a href="/web/Compra/Cesta/cesta.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
+                        <img src="/img/Logos/chat.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
