--- a/web/CódigoReutilizable/header.perfil.html
+++ b/web/CódigoReutilizable/header.perfil.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/CSS/header_footer/header.css">
 </head>
 <header>
-    <div class="c-fondo">
+    <div class="cab-fondo">
         <!--Nombre de la tienda-->
         <div class="nombre">
             <p>Nombre</p>
