--- a/web/PerfilUsuario/Ventas.html
+++ b/web/PerfilUsuario/Ventas.html
@@ -13,11 +13,13 @@
 
 <body>
     <header>
-        <div class="c-fondo">
+        <div class="cab-fondo">
             <!--Nombre de la tienda-->
             <div class="nombre">
                 <p>Nombre</p>
             </div>
+
+
             <div class="izq full">
                 <ul class="cabecera">
                     <li><a href="/web/PerfilUsuario/Inicio.html">Perfil</a></li>
@@ -25,6 +27,7 @@
                     <li class="choosen"><a href="/web/PerfilUsuario/Ventas.html">Vender</a></li>
                 </ul>
             </div>
+
             <!--Parte del usuario-->
             <div>
                 <a href="/web/PerfilUsuario/Inicio.html">
@@ -38,15 +41,11 @@
             </div>
             <!--Separación-->
             <sep class="sep"></sep>
-
-            <!--Carrito-->
+            <!--Favoritos-->
             <div>
-                <a href="/web/Compra/Cesta/cesta.html">
+                <a href="\web\Venta\favsVenta.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
-                    </div>
-                    <div>
-                        <p class="c-nombre">Carrito</p>
+                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
@@ -54,9 +53,9 @@
             <sep class="sep"></sep>
             <!--Favoritos-->
             <div>
-                <a href="\web\Venta\favsVenta.html">
+                <a href="/web/Compra/Cesta/cesta.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
+                        <img src="/img/Logos/chat.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
