--- a/web/Venta/ComprarObjeto/objParticular.html
+++ b/web/Venta/ComprarObjeto/objParticular.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="c-fondo">
+        <div class="cab-fondo">
             <!--Nombre de la tienda-->
             <div class="nombre">
                 <p>Nombre</p>
@@ -42,7 +42,7 @@
             <sep class="sep"></sep>
             <!--Favoritos-->
             <div>
-                <a href="/web/Compra/Cesta/cesta.html">
+                <a href="/web/Venta/chat.html">
                     <div class="cuadro">
                         <img src="/img/Logos/chat.png" class="foto-c  foto">
                     </div>
