--- a/web/Compra/favsCompra.html
+++ b/web/Compra/favsCompra.html
@@ -10,11 +10,12 @@
 
 <body>
     <header>
-        <div class="c-fondo">
+        <div class="cab-fondo">
             <!--Nombre de la tienda-->
             <div class="nombre">
                 <p>Nombre</p>
             </div>
+
             <!--Parte del usuario-->
             <div>
                 <a href="/web/PerfilUsuario/Inicio.html">
@@ -28,15 +29,11 @@
             </div>
             <!--Separación-->
             <sep class="sep"></sep>
-
-            <!--Carrito-->
+            <!--Favoritos-->
             <div>
-                <a href="/web/Compra/Cesta/cesta.html">
+                <a href="\web\Compra\favsCompra.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
-                    </div>
-                    <div>
-                        <p class="c-nombre">Carrito</p>
+                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
                     </div>
                 </a>
             </div>
@@ -44,9 +41,9 @@
             <sep class="sep"></sep>
             <!--Favoritos-->
             <div>
-                <a href="\web\Compra\favsCompra.html">
+                <a href="/web/Compra/Cesta/cesta.html">
                     <div class="cuadro">
-                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
+                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
                     </div>
                 </a>
             </div>
