--- a/web/CódigoReutilizable/headerVenta.html
+++ b/web/CódigoReutilizable/headerVenta.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="c-fondo">
+    <div class="cab-fondo">
         <!--Nombre de la tienda-->
         <div class="nombre">
             <p>Nombre</p>
