--- a/web/PerfilUsuario/Compras.html
+++ b/web/PerfilUsuario/Compras.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div class="c-fondo">
+        <div class="cab-fondo">
             <!--Nombre de la tienda-->
             <div class="nombre">
                 <p>Nombre</p>
