--- a/web/Venta/chat.html
+++ b/web/Venta/chat.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!--No se como hacer un chat sin que parezca estático-->
 
 <head>
     <meta charset="utf-8" />
@@ -10,16 +11,17 @@
 
 <body>
     <header>
-        <div class="c-fondo">
-            <!--Nombre de la tienda-->
-            <div class="nombre">
-                <p>Nombre</p>
-            </div>
-            <div>
+        <header>
+            <div class="cab-fondo">
+                <!--Nombre de la tienda-->
+                <div class="nombre">
+                    <p>Nombre</p>
+                </div>
+
                 <!--Parte del usuario-->
                 <div>
                     <a href="/web/PerfilUsuario/Inicio.html">
-                        <div>
+                        <div class="cuadro">
                             <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
                         </div>
                         <div>
@@ -32,7 +34,7 @@
                 <!--Favoritos-->
                 <div>
                     <a href="\web\Venta\favsVenta.html">
-                        <div>
+                        <div class="cuadro">
                             <img src="/img/Logos/fav0.png" class="foto-c  foto">
                         </div>
                     </a>
@@ -41,87 +43,84 @@
                 <sep class="sep"></sep>
                 <!--Favoritos-->
                 <div>
-                    <a href="/web/Compra/Cesta/cesta.html">
-                        <div>
+                    <a href="/web/Venta/chat.html">
+                        <div class="cuadro">
                             <img src="/img/Logos/chat.png" class="foto-c  foto">
                         </div>
                     </a>
                 </div>
             </div>
-        </div>
-    </header>
-    <div class="chatCont">
-        <div class="chats">
+        </header>
+        <div class="chatCont">
+            <h1 class="cent">Mensajes</h1>
+            <div class="chats">
+                <ul class="cont-izq">
+                    <li class="s-chat">
+                        <button class="c-fondo" onclick="chargeChat">
+                        <div id="nombre">
+                            <p id="nombre">Aitana:</p>
+                        </div>
+                        <div id="ultimoMensaje">
+                            <p id="ultimoMensaje">Hola, me gustaría comprar una cosa</p>
+                        </div>
+                    </button>
+                    </li>
+                    <li class="s-chat">
+                        <button class="c-fondo" onclick="chargeChat">
+                        <div id="nombre">
+                            <p id="nombre">Cristóbal</p>
+                        </div>
+                        <div id="ultimoMensaje">
+                            <p id="ultimoMensaje">Hola, estoy interesado en aprobar</p>
+                        </div>
+                    </button>
+                    </li>
+                    <li class="s-chat">
+                        <button class="c-fondo" onclick="chargeChat">
+                        <div id="nombre">
+                            <p id="nombre">TutiFruti</p>
+                        </div>
+                        <div id="ultimoMensaje">
+                            <p id="ultimoMensaje">Buenas, ¿Sigue en venta la camisa vaquera?</p>
+                        </div>
+                    </button>
+                    </li>
+                </ul>
+                <div class="box">
+                    <!--Template de vendedor-->
+                    <template class="item c-izq">
+                    <img class="img-der" src="" />
+                    <span class="message msg-izq"> Buenas, me gustaría comprar la chaquetita vaquera. </span>
+                </template>
+                    <!--Template de comprador-->
+                    <template class="item x-der">
+                    <img class="img-izq" src="" />
+                    <span class="message msg-der"> Dale, está a 50, pero para ti, la rebajo a 49,99, por buena persona. </span>
+                </template>
 
-            <div class="s-chat">
-                <div class="c-fondo">
-                    <div class="img-izq"><img src="" id="userxProfile"></div>
-                    <div id="nombre">
-                        <p id="nombre">Aitana</p>
+                    <div class="item c-izq">
+                        <img class="img-der" src="" />
+                        <span class="message msg-izq"> Buenas, me gustaría comprar la chaquetita vaquera.</span>
                     </div>
-                    <div id="ultimoMensaje">
-                        <p id="ultimoMensaje">Hola, estoy interesado en aprobar</p>
+
+                    <div class="item c-der">
+                        <img class="img-izq" src="" />
+                        <span class="message msg-der"> Dale, está a 50, pero para ti, la rebajo a 49,99, por buena persona. </span>
+                    </div>
+
+                    <div class="item c-izq">
+                        <img class="img-der" src="" />
+                        <span class="message msg-izq"> Ossss, muchas gracias señor!! </span>
+                    </div>
+
+
+                    <div class="input-box">
+                        <input type="text" id="message" placeholder="Escríbele..." />
+                        <button> Send </button>
                     </div>
                 </div>
             </div>
-
-            <div class="s-chat">
-                <div class="c-fondo">
-                    <div><img src="" id="userxProfile"></div>
-                    <div id="nombre">
-                        <p id="nombre">Cristóbal</p>
-                    </div>
-                    <div id="ultimoMensaje">
-                        <p id="ultimoMensaje">Hola, estoy interesado en aprobar</p>
-                    </div>
-                </div>
-            </div>
-            <div class="s-chat">
-                <div class="c-fondo">
-                    <div><img src="" id="userxProfile"></div>
-                    <div id="nombre">
-                        <p id="nombre">TutiFruti</p>
-                    </div>
-                    <div id="ultimoMensaje">
-                        <p id="ultimoMensaje">Hola, estoy interesado en aprobar</p>
-                    </div>
-                </div>
-            </div>
         </div>
-        <div class="box">
-            <!--Template de vendedor-->
-            <template class="item c-izq">
-                <img class="img-der" src="" />
-                <span class="message"> Buenas, me gustaría comprar la chaquetita vaquera. </span>
-            </template>
-            <!--Template de comprador-->
-            <template class="item x-der">
-                <img class="img-izq" src="" />
-                <span class="message"> Dale, está a 50, pero para ti, la rebajo a 49,99, por buena persona. </span>
-            </template>
-
-            <div class="item c-izq">
-                <img class="img-der" src="" />
-                <span class="message"> Buenas, me gustaría comprar la chaquetita vaquera.</span>
-            </div>
-
-            <div class="item c-der">
-                <img class="img-izq" src="" />
-                <span class="message"> Dale, está a 50, pero para ti, la rebajo a 49,99, por buena persona. </span>
-            </div>
-
-            <div class="item c-izq">
-                <img class="img-der" src="" />
-                <span class="message"> Ossss, muchas gracias señor!! </span>
-            </div>
-
-
-            <div class="input-box">
-                <input type="text" id="message" placeholder="Escríbele..." />
-                <button> Send </button>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
